fix(图表-热力图): 修复热力图查看数据时，总是会显示记录数的问题